# Schedule-Manipulation-Analysis-Tool-Experiment

./: .gitattributes  .gitignore  AUTONOMOUS-BUILD-PROMPT.md  AUTONOMOUS-BUILD-SETUP-CHECKLIST.md  CLAUDE.md  EXPERIMENT-REPORT.md  FIDELITY-COMPROMISE-dcma-citations.md  FIDELITY-DECISION-cpm-engine.md  FIDELITY-DECISION-dcma-coverage.md  FIDELITY-DECISION-dcma-severity.md  HANDOFF.md  LICENSE  README.md  SANDBOX.md  STUCK-branch-strategy.md  STUCK-build-plan-unavailable.md  build-app.bat  build-app.command  pyproject.toml  requirements.txt  schedule_tool.spec
.claude/: settings.json
.claude/agents/: README.md  qc-checker.md  worker.md
.claude/hooks/: qc_session_start.sh  session_start.sh
.githooks/: pre-commit
.github/workflows/: build-apps.yml  ci.yml  installer-smoke.yml
00_REFERENCE_INTAKE/: # Schedule Forensics — Roles & Orch.txt  Ai Result Comparision.docx  DEPOSIT-HERE.md  Executive Summary Large Test File.docx  FILE-NAMES.md  HANDOFF.md  Hard_File Forensic Analysis Report.xlsx  INDEX.md  JUICE UVS IMS DD 20190524 NC.xer  JUICE UVS IMS DD 20190705 NC.xer  JUICE UVS IMS DD 20190802 NC.xer  JUICE UVS IMS DD 20190927 NC.xer  JUICE UVS IMS DD 20191122 NC.xer  JUICE UVS IMS DD 20200103 NC.xer  JUICE UVS IMS DD 20200228 NC (002).xer  Large Test File (OverAl Fixed) UID_152_Directional_Path_Analysis_2026-6-24-13-17-48.xlsx  Large_Test_File_UID_152_Directional_Path_Analysis_2026-7-8-8-45-50.xlsx  P-P5 - Quick Add Metrics .xlsx  P2-P5 - DCMA Report.xlsx  P2-P5 - Detailed Metric Report.xlsx  P2-P5 - Metric History Report.xlsx  P2-P5 - Quick Add Metrics.xlsx  Project2 vs Project5_TAMPERED Forensic Analysis Report.xlsx  Project2v5 Forensic Analysis Report.xlsx  Project5_TAMPERED.mpp  Project5_TAMPERED_UID_67_Directional_Path_Analysis_2026-7-8-8-19-10.xlsx  SRA Risk - Project5_TAMPERED - SRA.xlsx  SRA Sensitivity Analysis.xlsx  UID_145_Directional_Path_Analysis_2026-6-22-11-35-10.xlsx  UID_145_Directional_Path_Analysis_2026-6-23-12-28-46.xlsx  UID_145_Directional_Path_Analysis_All_Dependencies_2026-6-23-12-37-10.xlsx  UID_152_Directional_Path_Analysis_2026-6-23-12-46-44.xlsx  UID_152_Directional_Path_Analysis_ALL_2026-6-23-15-5-21.xlsx  UID_152_Directional_Path_Analysis_All Dependents Not Leveled_2026-6-23-20-30-55.xlsx  UID_152_Directional_Path_Analysis_Leveled_All_Dependents_2026-6-23-20-28-26.xlsx  UID_152_Directional_Path_Analysis_Resource_Level_2026-6-23-17-8-43.xlsx  UID_4_Directional_Path_Analysis_2026-6-23-15-42-46.xlsx  UID_4_Directional_Path_Analysis_Progress_2026-6-23-16-0-6.xlsx  UID_4_Directional_Path_Analysis_Split_2026-6-23-16-31-24.xlsx  Use Fable 5 Ultracode.md  (+5 more)
00_REFERENCE_INTAKE/acumen_v8.11.0/: HA296F~1.XLS  HA3755~1.XLS  HA7B01~1.XLS  HA88CE~1.XLS  HA95A8~1.XLS  HARD_F~3.XLS  HARD_F~4.XLS  Hard_File_Fuse - Fuse Analysis Report.xlsx  Hard_File_Fuse - Metric History Report.xlsx  Hard_File_Fuse - Quick Add Metrics .xlsx  Hard_File_Fuse - Summary Metric Report.xlsx  Hard_File_Fuse.afw  Hard_File_missing_logic.xlsx  Hard_File_update vs update2_Fuse - Analysis Report.xlsx  Hard_File_update vs update2_Fuse - Detailed Metric Report.xlsx  Hard_File_update vs update2_Fuse - Excel .xlsx  Hard_File_update vs update2_Fuse - Metric History Report.xlsx  Hard_File_update vs update2_Fuse - Summary Report.xlsx  Hard_File_update vs update2_Fuse.afw  Hard_File_update2 vs update3_Fuse - Analysis Report.xlsx  Hard_File_update2 vs update3_Fuse - Detailed Metric Report.xlsx  Hard_File_update2 vs update3_Fuse - Excel .xlsx  Hard_File_update2 vs update3_Fuse - Metric History Report.xlsx  Hard_File_update2 vs update3_Fuse - Metrics Report.xlsx  Hard_File_update2 vs update3_Fuse - Summary Metrics Report.xlsx  Hard_File_update2 vs update3_Fuse.afw  Hard_File_updated vs update 2_ Forensic Analysis Report.xlsx  Hard_File_updated2 vs update3 Forensic Analysis Report.xlsx  Hard_File_updated3 vs Hard_File_updated4 24 hour calendar Acumen Fuse.afw  Hard_File_updated3 vs Hard_File_updated4 24 hour calendar Field Map.fieldmap.xml  Hard_File_updated_missing_logic.xlsx  Large Test File Acumen DCMA 14 Point vs Program Results.xlsx  Large Test File vs Large Test File2 - Acumen Forensic Analysis Report.xlsx  Large Test File vs Large Test File2 - Acumen Fuse - Detailed Metric Report.xlsx  Large Test File vs Large Test File2 - Acumen Fuse -Metric History Report.xlsx  Large Test File vs Large Test File2 - Acumen Fuse Analysis Quick Add Metrics.xlsx  (+9 more)
app/: analysis.py  health.py
audit/: AUDIT-REPORT.md  PARK-LIST.md  PATH-FORWARD.md  SESSION-STATE.md  VERIFICATION-REPORT.md
docs/: ACUMEN-PARITY-MODE.md  CONNECT-A-BIGGER-AI-MODEL.md  DESIGN-SYSTEM.md  FINAL-REPORT.md  FUSE-VALIDATION.md  HANDBOOK-EXTENSION-PLAN.md  HAZARDS.md  METRIC-DICTIONARY.md  MPXJ.md  OLLAMA.md  PARITY-REPORT.md  REBUILD-PROMPT.md  REFERENCES.md  TEST-PROJECTS.md  USER-GUIDE.md  automated-reporting.md  cpm-model.md  dcma-metrics.md  risks.md
installer/: README-DISTRIBUTABLE.md  install-tier1.command  install-tier1.ps1  install-tier1.sh  install-tier2.command  install-tier2.ps1  install-tier2.sh  install-tier3.command  install-tier3.ps1  install-tier3.sh
launch/: README.md  Schedule-Forensics.bat
packaging/: README.md  make_icon.py  schedule-forensics.bat  schedule-forensics.command  schedule-forensics.desktop
scripts/: validate_against_msp.py
tests/: README.md  conftest.py  test_analysis.py  test_cei.py  test_com_msproject.py  test_coverage_misc.py  test_cpm.py  test_cpm_link_types.py  test_end_to_end.py  test_exec_summary.py  test_health.py  test_importer_mpp_mpxj.py  test_importer_msp_xml.py  test_importer_xer.py  test_launcher.py  test_logging_redaction.py  test_metrics.py  test_metrics_duration_float.py  test_models.py  test_packaging.py  test_parity_report_sync.py  test_performance_indices.py  test_report_sra.py  test_report_trends.py  test_schedule_compare.py  test_schema_freeze.py  test_smoke.py  test_startup_bootstrap.py  test_state_docs.py  test_trend_analysis.py  test_units.py  test_version_matcher.py  test_web.py  test_webapp.py  test_windowless_subprocess.py
tools/: make_test_projects.py
(+884 files in other folders)
