# pyproject.toml — project definition + QC toolchain (§7)
#
# Real project definition so the package resolves, tooling (ruff/mypy/pytest/
# coverage/bandit) has a home, and `pip install -e '.[dev]'` works. The full
# QC/PM toolchain is wired into CI from milestone M1 (.github/workflows/ci.yml).
# Runtime dependencies are added per build milestone (see docs/PLAN/BUILD-PLAN.md).
#
# CUI guardrail: do NOT add any cloud/remote-HTTP client to `dependencies` without
# an explicit ADR — the egress guard (src/schedule_forensics/net_guard.py, tested
# by tests/guards/test_egress.py) fails CI if a forbidden distribution lands in the
# runtime dependency set.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-forensics"
version = "1.0.0"
description = "Local, NASA-themed forensic schedule-analysis tool (CUI-safe, offline)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — see LICENSE (placeholder)" }
authors = [{ name = "Schedule Forensics build" }]
keywords = ["scheduling", "cpm", "forensic", "dcma", "acumen", "nasa", "cui"]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

# Runtime dependencies (added per milestone in Phase 2). pydantic powers the frozen,
# strict, UniqueID-keyed domain model (M2). The M13 web layer adds FastAPI + Jinja2 + a
# bare uvicorn server. CUI guardrail: NONE of these pull a forbidden HTTP client into the
# runtime — uvicorn is the plain build (NOT uvicorn[standard], which would add the
# forbidden `websockets` distribution); the server is inbound/local-only and binds to
# 127.0.0.1. The egress guard (net_guard.py) stays green (no requests/httpx/urllib3/
# websockets/aiohttp runtime dep, no importable cloud SDK).
dependencies = [
  "pydantic>=2",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.urls]
Repository = "https://github.com/polittdj/schedule-manipulation-analysis-tool-experiment"
Documentation = "https://github.com/polittdj/schedule-manipulation-analysis-tool-experiment/tree/main/docs"

[project.scripts]
# One-command launcher: starts the local dashboard on 127.0.0.1 and opens the browser.
schedule-forensics = "schedule_forensics.launcher:main"

[project.optional-dependencies]
# Quality/PM toolchain required by §7 (QC/PM regime). Pinned loosely now;
# tightened when first wired into CI during Phase 2.
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "bandit>=1.7",
  "pip-audit>=2.7",
  # httpx backs starlette's TestClient (web route tests). DEV-ONLY — it is a forbidden
  # *runtime* distribution (egress guard), so it must never enter `dependencies`.
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

# --- ruff: lint + format -------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# The web view module embeds HTML/CSS string literals where an 80-100 col limit is
# meaningless; line-length is not enforced there (the logic stays readable regardless).
"src/schedule_forensics/web/app.py" = ["E501"]

# --- mypy: types ---------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# --- pytest + coverage ---------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "parity: Acumen Fuse v8.11.0 / SSI golden acceptance gate (§6.B) over the committed golden fixtures (tests/parity/).",
]
filterwarnings = [
  # starlette's TestClient still imports httpx; the deprecation is upstream, not ours.
  "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["schedule_forensics"]

[tool.coverage.report]
show_missing = true
# Coverage gates (§7): overall >=70% (this `fail_under`); engine >=85% is enforced
# as a separate CI step (`coverage report --include='*/engine/*' --fail-under=85`).
fail_under = 70

# --- bandit: security ----------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv", "tools"]
